# leenaai_firestoredb

./: INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  build_package.py  migrate_imports.py  pyproject.toml  requirements.txt  setup.py
leenaai_firestoredb/: __init__.py
leenaai_firestoredb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
leenaai_firestoredb/firestore/: __init__.py  actions.py  bookings.py  client.py  clients.py  dashboard.py  developers.py  images.py  project_phases.py  projects.py  requesting_demo.py  requirements.py  sales_employees.py  share.py  sharing_data.py  units.py  users.py
leenaai_firestoredb/schemas/: __init__.py  collection_names.py  dashboard_record.py  keys.py
leenaai_firestoredb/utils/: __init__.py  developer_resolver.py  insert_units.py
leenaai_firestoredb/vector/: __init__.py  chroma_sync.py  project_sync.py  sync.py
